--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,5 @@
 {
-  "helloWorld": "Hello World!",
+  "helloWorld": "Hello World! I love you!",
   "@helloWorld": {
     "description": "The conventional newborn programmer greeting"
   }
